// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkupText should render properly 1`] = `
<span>
  <p>
    Hello world!
  </p>
</span>
`;

exports[`MarkupText should render properly with different tag 1`] = `
<a>
  <p>
    Hello world!
  </p>
</a>
`;
